[package]
name = "printing-service"
version = "0.1.1"
edition = "2021"
build = "build.rs"
default-run = "printing-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printers = "2.0.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.0"
headless_chrome = "1.0.9"
rand = "0.8.5"
actix-cors = "0.7.0"
windows-service = "0.7.0"
parking_lot = "0.12.3"

[package.metadata.deb]
maintainer = "Pronesoft SRL <soporte@pronesoft.com>"
copyright = "2024, Pronesoft SRL"
license-file = ["LICENSE", "0"]
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/printing-service", "/usr/bin/printing-service", "755"],
    ["packaging/linux/printing-service.service", "/lib/systemd/system/printing-service.service", "644"],
]

[package.metadata.deb.systemd-units]
unit-name = "printing-service"
enable = true
start = true
